name:                dimlCompiler
version:             0.1.0.0
synopsis:            A compiler written in Haskell for a toy language diML (diminished ML). Target language is LLVM.
description:         Please see README.md
homepage:            http://github.com/githubuser/dimlCompiler#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Dietert
maintainer:          tdietert@mail.usf.edu
copyright:           2010 Thomas Dietert
category:            Web
build-type:          Simple
cabal-version:       >=1.10
other-modules:       src/Eval.hs

executable dimlCompiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, mtl, transformers, haskeline
