name:                dimlCompiler
version:             0.1.0.0
synopsis:            A compiler written in Haskell for a toy language diML (diminished ML). Target language is LLVM.
description:         Please see README.md
homepage:            http://github.com/githubuser/dimlCompiler#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Dietert
maintainer:          tdietert@mail.usf.edu
copyright:           2010 Thomas Dietert
category:            Web
build-type:          Simple
data-files:          builtins/builtins.ll
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       mtl,
                       transformers,
                       haskeline,
                       llvm-general-pure >= 3.4,
                       llvm-general >= 3.4,
                       containers >=0.4.2.1
  default-language:    Haskell2010

executable dimlCompiler
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IR,Syntax,Typecheck,Lexer,Parser,Codegen,EmitLLVM
  default-language:    Haskell2010 
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       mtl,
                       transformers,
                       haskeline,
                       containers >= 0.4.2.1,
                       llvm-general-pure >= 3.4,
                       llvm-general >= 3.4
